--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
+    "@react-spring/web": "^9.7.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
